--- a/apps/frontend/admin-portal/index.html
+++ b/apps/frontend/admin-portal/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/Logo.png" />
     <link rel="stylesheet" href="/index.css" />
-    <title>Beings of Habit - Blog Portal</title>
+    <title>Beings of Habit - Admin Portal</title>
   </head>
 
   <body>
